--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -28,6 +28,7 @@
                 <section>
                     <strong>Form Results:</strong>
                     <div id="results"></div>
+                    <div id="errMsgUrl"></div>
                 </section>
     </main>
 
